system/gateway-api/templates/gatewayclass-metallb-test.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: cilium-metallb-test
spec:
  controllerName: io.cilium/gateway-controller
  description: Cilium Gateway API controller with MetalLB frontend service
  parametersRef:
    group: cilium.io
    kind: CiliumGatewayClassConfig
    name: cilium-metallb-test
    namespace: gateway-api
